kubernetes/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-type: basic
  labels:
    app: ingress
  name: prometheus-ingress
spec:
  rules:
    - host: prometheus.klovercloud.io
      http:
        paths:
          - backend:
              service:
                name: monitoring-prometheus-server
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
